# AuG2PeR

./: .gitignore  .gitmodules  M0_left-M1_right.json  Odrive_bldc_motor_setup.txt  motor_test.py
Arduino_Scripts/Grove_10dof/: Grove_10dof.ino
Arduino_Scripts/HelloWorld/: HelloWorld.ino
Arduino_Scripts/IMU/: IMU.ino
Arduino_Scripts/IMU/Callibrate_IMU/: Callibrate_IMU.ino
Arduino_Scripts/IMU/IMU_array/: IMU_array.ino
Arduino_Scripts/IMU/test/: test.ino
Arduino_Scripts/libraries/Grove_IMU_10DOF_v2.0-master/: MPU9250.cpp
Arduino_Scripts/libraries/ros_lib/amr/: IMU_10dof.h  wheel.h
Arduino_Scripts/libraries/ros_lib/handpose/: Gripper.h  HandPose.h
Arduino_Scripts/libraries/ros_lib/ros_decawave/: AnchorArray.h
Arduino_Scripts/ros_lib/ros_decawave/: Acc.h  Anchor.h  Tag.h
Arduino_Scripts/ros_lib/rplidar_ros/: StartMotor.h
Simulation/AuG2PeR/: package.xml
Simulation/AuG2PeR/config/: joint_names_AuG2PeR.yaml
Simulation/AuG2PeR/launch/: display.launch  tf_broadcast.launch
Simulation/AuG2PeR/meshes/: Accel.STL  Bump_1.STL  Bump_3.STL  Bump_4.STL  Bump_8.STL  Front_Rocker.STL  IMU.STL  Left_B_Castor.STL  Right_B_Castor.STL
Simulation/AuG2PeR/urdf/: AuG2PeR.urdf
Simulation/auG2PeR/: CMakeLists.txt
Simulation/auG2PeR/launch/: gazebo.launch
Simulation/auG2PeR/meshes/: Bump_2.STL  Bump_5.STL  Bump_6.STL  Bump_7.STL  Front_Camera_MT.STL  Left_F_Castor.STL  Left_Rocker.STL  Lidar.STL  Mag.STL  Reverse_Camera.STL  Reverse_Camera_MT.STL  Right_F_Castor.STL  Right_Rocker.STL  UWB.STL  Wheel_Left.STL  Wheel_Right.STL
Simulation/auG2PeR/urdf/: AuG2PeR.csv
Simulation/aug2per_sim/: CMakeLists.txt  package.xml
Simulation/aug2per_sim/config/: joint_names_aug2per_sim.yaml
Simulation/aug2per_sim/launch/: display.launch  gazebo.launch
Simulation/aug2per_sim/meshes/: Body.STL  Front_Camera_MT.STL  Front_Rocker.STL  IMU.STL  Left_B_Castor.STL  Left_F_Castor.STL  Left_Rocker.STL  Lidar_Base.STL  Lidar_Scanner.STL  Reverse_Camera_MT.STL  Right_B_Castor.STL  Right_F_Castor.STL  Right_Rocker.STL  UWB.STL  Wheel_Left.STL  Wheel_Right.STL
Simulation/aug2per_sim/urdf/: aug2per_sim.csv  aug2per_sim.urdf
Simulation/aug2per_sim_fine/: CMakeLists.txt  package(1).xml
Simulation/aug2per_sim_fine/launch/: display.launch  gazebo(1).launch
Simulation/aug2per_sim_fine/meshes/: Body(1).STL  Front_Camera_MT(1).STL  Front_Rocker(1).STL  IMU(1).STL  Left_B_Castor.STL  Left_F_Castor(1).STL  Left_Rocker.STL  Lidar_Base.STL  Lidar_Scanner(1).STL  Reverse_Camera_MT.STL  Right_B_Castor(1).STL  Right_F_Castor(1).STL  Right_Rocker.STL  UWB.STL
Simulation/aug2per_sim_fine/urdf/: aug2per_sim_fine(1).csv  aug2per_sim_fine.urdf
amr/: CMakeLists.txt  package.xml
amr/launch/: amr.launch  urdf_descript.launch
amr/msg/: IMU_10dof.msg  odrive.msg
amr/src/: Laser_Sub.py  Logger.py  controller.py  diff_drive  motor_driver  odrive.py  tf_listen.py  transform_prac.py
amr/src/IMU/Grove_10dof/: Grove_10dof.ino
amr/urdf_descript/: AuG2PeR_lite.xml
external_repo/: git_repo_url.txt
libraries/ros_lib/amr/: grove_10dof.h
libraries/ros_lib/parkinsons/: Gripper.h
matlab_msg_gen_ros1/glnxa64/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
matlab_msg_gen_ros1/glnxa64/devel/include/amr/: IMU_10dof.h
matlab_msg_gen_ros1/glnxa64/devel/include/ros_decawave/: Acc.h  Tag.h
matlab_msg_gen_ros1/glnxa64/devel/include/rplidar_ros/: StartMotorResponse.h
matlab_msg_gen_ros1/glnxa64/devel/lib/pkgconfig/: amr.pc  ros_decawave.pc  rplidar_ros.pc
matlab_msg_gen_ros1/glnxa64/install/: .rosinstall
matlab_msg_gen_ros1/glnxa64/install/include/amr/: grove_10dof.h  odrive.h  wheel.h
matlab_msg_gen_ros1/glnxa64/install/include/ros_decawave/: Anchor.h  AnchorArray.h
matlab_msg_gen_ros1/glnxa64/install/include/rplidar_ros/: StartMotorRequest.h  visibility_control.h
matlab_msg_gen_ros1/glnxa64/install/lib/pkgconfig/: amr.pc  ros_decawave.pc  (+1 more)
matlab_msg_gen_ros1/glnxa64/src/amr/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
matlab_msg_gen_ros1/glnxa64/src/ros_decawave/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
matlab_msg_gen_ros1/glnxa64/src/ros_decawave/include/ros_decawave/: visibility_control.h
matlab_msg_gen_ros1/glnxa64/src/ros_decawave/m/+ros/+internal/+ros/+custommessages/+ros_decawave/: acc.m  anchor.m
matlab_msg_gen_ros1/glnxa64/src/ros_decawave/m/+ros/+msggen/+ros_decawave/: Acc.m  AnchorArray.m
matlab_msg_gen_ros1/glnxa64/src/ros_decawave/src/: ros_decawave_Acc_common.cpp  ros_decawave_AnchorArray_common.cpp  ros_decawave_Anchor_common.cpp  ros_decawave_Tag_common.cpp  ros_decawave_msg_Acc_publisher.cpp  ros_decawave_msg_Acc_subscriber.cpp  ros_decawave_msg_AnchorArray_publisher.cpp  ros_decawave_msg_AnchorArray_subscriber.cpp  ros_decawave_msg_Anchor_publisher.cpp  ros_decawave_msg_Anchor_subscriber.cpp  ros_decawave_msg_Tag_publisher.cpp  ros_decawave_msg_Tag_subscriber.cpp
matlab_msg_gen_ros1/glnxa64/src/rplidar_ros/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
rosbag/: 2020-10-12-17-14-19.bag  2020-10-12-22-07-29.bag  Read_IMU_rosbag.asv  Read_IMU_rosbag.m
src/ROS2Arduino/Arduino/ROS_Arduino_Freq/: ROS_Arduino_Freq.ino
src/ROS2Arduino/Python/: test-script.py
test_pkg/: CMakeLists.txt  package.xml
test_pkg/src/: test-script.py
test_pkg/src/Arduino_Sketch/ROS_Arduino_Freq/: ROS_Arduino_Freq.ino
test_scripts/: CMakeLists.txt  package.xml
(+62 files in other folders)
